--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&display=swap');
+
 .projects-container {
     display: flex;
     flex-direction: column;
@@ -18,6 +21,7 @@
   .header-row h1 {
     font-size: 10rem;
     color: #333;
+    font-family: 'EB Garamond', serif;
   }
   
   /* Two-column layout for the content */
@@ -39,23 +43,25 @@
 }
   
   .left-column p {
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     line-height: 1.5;
     padding-right: 20px;
     color: #555;
+    font-family: 'EB Garamond', serif;
   }
   
   .discovered {
     width: max-content;
     margin-top: 20px;
     padding: 5px;
-    border-bottom: 3px solid black;
+    border-bottom: 1px solid black;
     border-left: none;
     border-right: none;
     border-top: none;
     color: #333;
     cursor: pointer;
-    font-size: 3rem;
+    font-family: 'EB Garamond', serif;
+    font-size: 2.5rem;
     transition: background-color 0.3s;
 }
 
@@ -77,7 +83,7 @@
   /* Grayscale and scale-out effect on images */
   .project img {
     width: 100%;
-    height: 250px; /* Set fixed height for uniformity */
+    height: 350px; /* Set fixed height for uniformity */
     object-fit: cover; /* Ensures aspect ratio is preserved */
     filter: grayscale(100%);
     transition: all 0.4s ease; /* Smooth scaling and grayscale transition */
@@ -92,7 +98,7 @@
   /* Project brief with fade-in and slide-up effect */
   .project p {
     margin-top: 10px;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #777;
     opacity: 0; /* Initially hidden */
     transform: translateY(20px); /* Initially moved down */
