--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,3 +28,344 @@ body:not(.loading) #fullpage-wrapper {
 .fp-watermark a {
   display: none !important;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,600,800&display=swap");
+
+$red: rgb(237, 237, 237);
+$black: grey;
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.container {
+  .wrapper {
+    .home {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      p {
+        font-size: 0.75rem;
+        letter-spacing: 0.3rem;
+        text-transform: uppercase;
+        font-weight: 500;
+      }
+      h5 {
+        margin-top: 260px;
+        font-size: 24px;
+        font-weight: 600;
+        padding-right: 360px;
+      }
+    }
+  }
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  font-size: 1.8rem;
+  height: 116px;
+  display: flex;
+  justify-content: center;
+  padding: 0 108px;
+  color: $black;
+  .inner-header {
+    position: relative;
+    z-index: 10;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo a {
+      font-family: 'Trochut', sans-serif;
+      font-weight: 700;
+      font-size: 3.6rem;
+      text-decoration: none;
+      color: black;
+    }
+    .menu {
+      button {
+        border: none;
+        background: none;
+        outline: none;
+        cursor: pointer;
+        font-size: 2.2rem;
+        mix-blend-mode: difference;
+      }
+    }
+  }
+  .hamburger-menu {
+    display: none;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    .menu-secondary-background-color {
+      background: $black;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      z-index: -1;
+    }
+    .menu-layer {
+      position: relative;
+      background: $red;
+      height: 100%;
+      overflow: hidden;
+      .menu-city-background {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        background-size: cover;
+        background-repeat: no-repeat;
+        animation-name: backgroundEffect;
+        animation-duration: 30s;
+        animation-iteration-count: infinite;
+      }
+      .wrapper {
+        position: relative;
+        .menu-links {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          position: relative;
+          top: 200px;
+          padding: 0 116px;
+          width: 100%;
+          nav {
+            display: block;
+            ul {
+              margin: 0;
+              padding: 0;
+              li {
+                list-style: none;
+                font-size: 6rem;
+                font-weight: 700;
+                cursor: pointer;
+                height: 135px;
+                overflow: hidden;
+                position: relative;
+                width: 700px;
+                a {
+                  position: absolute;
+                  color: #333;
+                  text-decoration: none;
+                  &:hover {
+                    color: $black;
+                  }
+                }
+              }
+            }
+          }
+          .info {
+            color: #000000;
+            width: 300px;
+            h3 {
+              font-size: 3rem;
+              margin: 8px auto;
+            }
+            p {
+              margin: 0 auto;
+              font-size: 1.5rem;
+            }
+          }
+        }
+        .locations {
+          position: absolute;
+          bottom: -80px;
+          color: #000000;
+          margin-top: 16px;
+          font-size: 2rem;
+          font-weight: 600;
+          span {
+            cursor: pointer;
+            &:first-child {
+              margin-left: 64px;
+            }
+            font-weight: 400;
+            margin: 0 32px;
+            transition: 0.3s ease-in-out;
+            &:hover {
+              color: #fff;
+              background: $black;
+              padding: 8px 24px;
+              border-radius: 4px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@keyframes backgroundEffect {
+  0% {
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 40% 10%;
+  }
+  50% {
+    background-position: 0 10%;
+  }
+  75% {
+    background-position: 10% 40%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+
+/* Media Query for screens smaller than 1300px */
+@media (max-width: 1300px) {
+  .middle-button {
+    display: none;
+  }
+
+  .menu {
+    justify-content: flex-end;
+  }
+
+  .contactt {
+    display: none;
+  }
+
+  .menu button::after {
+    content: " Let's Talk";
+    font-family: 'EB Garamond', serif;
+    margin-left: 20px;
+    padding: 10px 10px;
+    border-bottom: 1px solid black;
+    color: #333;
+    cursor: pointer;
+    color: #333;
+    text-decoration: none;
+    font-size: 1.7rem;
+  }
+
+  .talk-button {
+    display: none;
+  }
+}
+
+
+.menu {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.talk-button {
+  background-color: #ff6f61;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+
+.logo {
+  flex: 1;
+}
+
+.middle-button {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  width: 100%;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.inner-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.contactt a{
+  font-family: 'EB Garamond', serif;
+  margin-top: 20px;
+  padding: 10px 10px;
+  border-bottom: 1px solid black;
+  color: #333;
+  cursor: pointer;
+  color: #333;
+  text-decoration: none;
+  font-size: 1.7rem;
+}
+
+.custom-arrow {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  color: black;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+#arrow-left {
+  left: 20px; /* Position it on the left side */
+}
+
+#arrow-right {
+  right: 20px; /* Position it on the right side */
+}
+
+.custom-arrow:hover {
+  color: #555; /* Slight hover effect */
+}
+
+#fp-nav ul li a.active span {
+  height: 12px;
+  width: 12px;
+  margin: -6px 0 0 -6px;
+  border-radius: 100%;
+  display: none;
+}
