--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/banner";
 @import "components/moreinfo";
 @import "components/contact";
+@import "components/ProjectDetailsModal";
 @import "components/projects";
 @import "components/marquee";
 @import "components/loader";
