--- a/src/sass/components/_ProjectDetailsModal.scss
+++ b/src/sass/components/_ProjectDetailsModal.scss
@@ -110,7 +110,6 @@
   img {
     width: 100%;
     object-fit: cover; /* Ensures image covers its container */
-    border-radius: 8px; /* Optional: round the corners */
   }
   
   /* Responsive adjustments for smaller screens */
@@ -271,33 +270,32 @@
     }
 }
 
-
 .next-project-section {
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .next-project-section h2 {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-  }
-  
-  .next-marker {
-    font-size: 1rem;
-    color: #888;
-    margin-left: 10px;
-  }
-  
-  .next-project-image {
-    width: 150px;
-    height: auto;
-    transition: transform 0.3s ease;
+    text-align: center;
+    margin-top: 20px;
+    padding: 70px 0px;
     cursor: pointer;
-  }
+    position: relative;
+    overflow: hidden; // Ensures the overflow is hidden when image is resized
+
+    h3 {
+      margin-top: 10px;
+      font-size: 1.5rem;
+      color: #333;
+    }
   
-  .next-project-image:hover {
-    transform: scale(1.05);
+    p {
+      color: #666;
+      font-size: 1rem;
+    }
+  
+    img {
+      width: 100%; // Take full width of containe
+      height: 60vh; // Set height to 30% of viewport height
+      object-fit: cover; // Ensures the image fills the space while cropping sides
+      object-position: center; // Centers the image in the container
+      margin-bottom: 10px;
+      border-radius: 0px;
+    }
   }
   
