--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -6,7 +6,7 @@
 
   @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&display=swap');
 
-  html, body {
+  body {
     height: 100%;
     font-family: Arial, sans-serif;
     overflow: hidden;
