--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -15,24 +15,37 @@ html, body {
   justify-content: space-evenly;
   align-items: flex-end;
   height: 100vh; /* Full viewport height */
-  padding: 86px 50px; /* Add some horizontal padding */
+  padding: 86px 86px; /* Add some horizontal padding */
+  
+  @media (max-width: 768px) {
+    height: max-content;
+  }
+
 }
 
 /* Each column style */
 .contact-column2 {
   width: 100%;
   padding: 30px;
+
+  @media (max-width: 768px) {
+    padding: 0;
+  }
 }
 
 .contact-column {
   display: flex;
   text-align: -webkit-right;
-  padding: 20px 116px;
+  padding: 40px;
   flex-direction: column;
+  
+  @media (max-width: 768px) {
+    padding: 0;
+  }
+
 }
 .contact-column h1 {
   font-size: 10rem;
-  font-weight: bold;
   color: #333;
 }
 
@@ -40,13 +53,14 @@ html, body {
   font-size: 3rem;
   color: #555;
   margin: 10px 0;
+  
 }
 
 /* Responsive styling for smaller screens */
 @media (max-width: 768px) {
   .contact-page {
     flex-direction: column;
-    padding: 0 20px;
+    padding: 0 32px;
   }
 
   .contact-column {
@@ -58,8 +72,16 @@ html, body {
   }
 
   .contact-column p {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
+    margin: 0;
+    padding: 0;
   }
+
+  .contact-column2 p:first-child {
+    display: none;
+  }
+
+  
 }
 
 .contact-column2 a {
@@ -69,9 +91,13 @@ html, body {
   align-items: center;
   font-family: sans-serif;
   color: #555;
-  font-size: 2.3rem;
+  font-weight: 499;
+  font-size: 1.8rem;
   margin: 20px 10px;
   transition: color 0.3s;
+  @media (max-width:756px) {
+    margin: 20px 0;
+  }
 }
 
 .contact-column2 a svg {
@@ -103,4 +129,7 @@ html, body {
 .social-icons {
   display: flex;
   flex-direction: column;
+  @media (max-width:756px) {
+    display: none;
+  }
 }
