--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -94,6 +94,10 @@ header {
   justify-content: center;
   padding: 0 108px;
   color: $black;
+  
+  @media (max-width: 756px) {
+    padding: 0 32px;
+  }
   .inner-header {
     position: relative;
     z-index: 10;
@@ -253,6 +257,18 @@ header {
   }
 }
 
+.menu .button3{
+  content: "";
+  font-family: 'EB Garamond', serif;
+  margin-left: 20px;
+  padding: 10px 10px;
+  border-bottom: 1px solid black;
+  color: #333;
+  cursor: pointer;
+  color: #333;
+  text-decoration: none;
+  font-size: 1.7rem;
+}
 
 /* Media Query for screens smaller than 1300px */
 @media (max-width: 1300px) {
@@ -268,10 +284,11 @@ header {
     display: none;
   }
 
-  .menu button::after {
-    content: " Let's Talk";
+  .menu .button3{
+    content: "";
     font-family: 'EB Garamond', serif;
     margin-left: 20px;
+    display: flex;
     padding: 10px 10px;
     border-bottom: 1px solid black;
     color: #333;
@@ -279,11 +296,16 @@ header {
     color: #333;
     text-decoration: none;
     font-size: 1.7rem;
+    
+    @media (max-width: 765px) {
+      padding: 0 10px;
+    }
   }
 
   .talk-button {
     display: none;
   }
+
 }
 
 
