--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -111,6 +111,9 @@
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
+    @media (max-width:756px) {
+     padding: 0 16px; 
+    }
   }
   
   .project {
@@ -152,7 +155,7 @@
     font-size: 2rem;
     color: #777;
     opacity: 1;
-    padding: 0 32px;
+    padding: 0 0px;
     text-align: left;
     transform: translateY(0);
     transition: none;
