--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -173,8 +173,17 @@ header {
           top: 200px;
           padding: 0 116px;
           width: 100%;
+          @media (max-width: 756px) {
+            display: flex;
+            flex-direction: column;
+            padding: 0 32px;
+            align-items: flex-start;
+          }
           nav {
             display: block;
+              @media (max-width:756px) {
+                width: 100%;
+              }
             ul {
               margin: 0;
               padding: 0;
@@ -218,20 +227,40 @@ header {
           margin-top: 16px;
           font-size: 2rem;
           font-weight: 600;
+          @media (max-width:756px) {
+            position: relative;
+          }
           span {
             cursor: pointer;
             &:first-child {
               margin-left: 64px;
+              @media (max-width: 756px) {
+                margin-left: 10px;
+              }
             }
             font-weight: 400;
             margin: 0 32px;
             transition: 0.3s ease-in-out;
+            @media (max-width:756px) {
+              margin: 25px;
+            }
             &:hover {
               color: #fff;
               background: $black;
               padding: 8px 24px;
               border-radius: 4px;
+              
             }
+
+            &:hover {
+              @media (max-width:756px) {
+              transition: none;
+              background-color: #000000;
+              color: white;
+              border-radius: none;
+              padding: 4px 12px;
+            }
+          }
           }
         }
       }
