--- a/src/sass/components/_aboutinfo.scss
+++ b/src/sass/components/_aboutinfo.scss
@@ -8,8 +8,8 @@
   background: rgba(0, 0, 0, 0.6); /* Dark background for overlay */
   display: flex;
   justify-content: center;
+  z-index: 1001;
   align-items: center;
-  z-index: 1001; /* Make sure it's above other content */
 }
 
 /* Modal Content */
@@ -23,6 +23,10 @@
   position: relative; /* For positioning close button */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
+.modal-conttent {
+  margin-top: 108px;
+}
+  
 body {
   margin: 0;
   font-family: Arial, sans-serif;
