--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -1,7 +1,10 @@
 .banner {
   z-index: 100;
-  margin-top: 140px;
+  width: 100%;
+  padding-top: 40px;
   position: relative;
+  height: 98vh;
+  align-content: center;
 
   @media (max-width: 756px) {
     flex-direction: column;
@@ -11,7 +14,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    margin: 0;
+    padding: 0;
   }
 
   .banner-row {
