--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -11,6 +11,7 @@ html, body {
 
 .contact-page {
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-end;
