--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -429,8 +429,17 @@ header {
   opacity: 1; /* Make the icon visible */
   transform: translateX(0); /* Slide back to its normal position */
 }
+/* Hide scrollbars globally */
+html, body {
+  overflow: hidden;
+}
 
 
+.swiper-pagination-bullet {
+  margin: 7px !important;
+  height: 12px !important;
+  width: 12px !important;
+}
 
 .custom-arrow {
   position: fixed;
@@ -445,6 +454,7 @@ header {
   align-items: center;
   justify-content: center;
   color: rgb(22, 22, 22);
+
 
   /* Add padding or use a larger clickable area */
   padding: 10px;
@@ -477,4 +487,102 @@ header {
   margin: -6px 0 0 -6px;
   border-radius: 100%;
   display: none;
+}
+
+
+.swiper-container {
+  width: 100%;
+  height: 100vh; /* Full height to emulate fullPage.js behavior */
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Ensure each slide is full height */
+}
+
+.custom-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+  font-size: 2rem;
+  color: #000;
+}
+
+#arrow-left {
+  left: 20px;
+}
+
+#arrow-right {
+  right: 20px;
+}
+
+.swiper-pagination-bullet {
+  background: #000; /* Style pagination dots */
+}
+
+.contact-form-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+}
+
+.contact-form-container.show {
+  display: flex;
+}
+
+.contact-form {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+
+/* Custom navigation buttons */
+.custom-navigation {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  pointer-events: none;
+  z-index: 10;
+}
+
+.custom-navigation button {
+  pointer-events: all;
+  background: none;
+  border: none;
+  color: #333;
+  font-size: 4rem;
+  cursor: pointer;
+  padding: 0 20px;
+  z-index: 10;
+}
+
+/* Custom pagination dots at the bottom left */
+.custom-pagination {
+  position: absolute;
+  z-index: 10;
 }
